styles: fix scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,20 @@ html, body { height: 100%; }
   margin: 0;
   padding: 0;
 }
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
 
 body {
   background: #fff;
@@ -42,4 +56,8 @@ body {
 
 .center {
   text-align: center;
+}
+
+.mat-button.active {
+
 }
